//
//  Copyright (c) 2018 Snowplow Analytics Ltd. All rights reserved.
//
//  This program is licensed to you under the Apache License Version 2.0,
//  and you may not use this file except in compliance with the Apache License
//  Version 2.0. You may obtain a copy of the Apache License Version 2.0 at
//  http://www.apache.org/licenses/LICENSE-2.0.
//
//  Unless required by applicable law or agreed to in writing,
//  software distributed under the Apache License Version 2.0 is distributed on
//  an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either
//  express or implied. See the Apache License Version 2.0 for the specific
//  language governing permissions and limitations there under.
//

syntax = "proto3";

package com.snowplowanalytics.piinguin.server.generated.protocols;

service Piinguin {
  // Simple single PII record operations
  rpc CreatePiiRecord(CreatePiiRecordRequest) returns (ChangeRecordResponse) {}
  rpc ReadPiiRecord(ReadPiiRecordRequest) returns (ReadPiiRecordResponse) {}
  rpc DeletePiiRecord(DeletePiiRecordRequest) returns (ChangeRecordResponse) {}

  // Bidirectional streaming to work on N PII records
  rpc CreatePiiRecords(stream CreatePiiRecordRequest) returns (stream ChangeRecordResponse) {}
  rpc ReadPiiRecords(stream ReadPiiRecordRequest) returns (stream ReadPiiRecordResponse) {}
  rpc DeletePiiRecords(stream DeletePiiRecordRequest) returns (stream ChangeRecordResponse) {}
}

// Requests

message PiiRecord {
  string modifiedValue = 1;
  string originalValue = 2;
}

message CreatePiiRecordRequest {
  PiiRecord piiRecord = 1;
}

message DeletePiiRecordRequest {
  string modifiedValue = 1;
}

message ReadPiiRecordRequest {
  // https://ico.org.uk/for-organisations/guide-to-the-general-data-protection-regulation-gdpr/lawful-basis-for-processing/
  enum LawfulBasisForProcessing {
    CONSENT = 0;
    CONTRACT = 1;
    LEGAL_OBLIGATION = 2;
    VITAL_INTERESTS = 3;
    PUBLIC_TASK = 4;
    LEGITIMATE_INTERESTS = 5;
  }
  string modifiedValue = 1;
  LawfulBasisForProcessing processingBasis = 2;
}

// Responses

message Status {
  string message = 1;
  bool isSuccess = 2;
}

message ChangeRecordResponse {
  Status status = 1;
}

message ReadPiiRecordResponse {
  PiiRecord piiRecord = 1;
  Status status = 2;
}
